# qolyester

./: AUTHORS  BUGS  ChangeLog  DEVELOPERS  Makefile.am  Makefile.in  NEWS  README  TODO  bootstrap  configure  configure.ac
doc/: Doxyfile-daemon.in  Doxyfile-switch.in  Makefile.am  Makefile.in  virtual-network-v4.dot  virtual-network-v6.dot
doc/daemon/html/: a00001.html  a00002.html  a00003.html  a00004.html  a00005.html  a00006.html  a00007.html  a00008.html  a00009.html  a00010.html  a00011.html  a00012.html  a00013.html  a00014.html  a00015.html  a00016.html  a00017.html  a00018.html  a00019.html  a00020.html  a00021.html  a00022.html  a00023.html  a00024.html  a00025.html  a00026.html  a00027.html  a00028.html  a00029.html  a00030.html  a00031.html  a00032.html  a00033.html  a00034.html  a00035.html  a00036.html  a00037.html  a00038.html  a00039.html  a00040.html  (+765 more)
man/: Makefile.am  Makefile.in  qolsrd-dirtypromischack.man  qolsrd-hna1.man  qolsrd-hna2.man  qolsrd-mid1.man  qolsrd-mid2.man  qolsrd-mprred.man  qolsrd-nomid1.man  qolsrd-tables.man  qolsrd-tcred.man  qolsrd-virtual1.man  qolsrd-virtual2.man  qolsrd.8.in  qswitchd.8
src/: Makefile.am  Makefile.in  libparsedot_a-parsedot.cc  libparsedot_a-scandot.cc  parsedot.hh
src/daemon/: daemon_static_members_init.hcc  main.cc
src/daemon/alg/: dijkstra.hh  dijkstra.hxx  mainaddrof.hh  mainaddrof.hxx  mprselection.hh  mprselection.hxx  routingtable.hh  routingtable.hxx
src/daemon/cst/: params.hcc  params.hh
src/daemon/gra/: graph.hcc  graph.hh  graph.hxx
src/daemon/msg/: hello.hh  hello.hxx  hna.hh  hna.hxx  message.hh  message.hxx  mid.hh  mid.hxx  tc.hh  tc.hxx
src/daemon/net/: interface.hh  realinterface.hh  realinterface.hxx  route.hh  route.hxx  virtualinterface.hh  virtualinterface.hxx
src/daemon/pkt/: packet.hh  packet.hxx
src/daemon/sch/: events.hh  events.hxx
src/daemon/set/: duplicate.hcc  duplicate.hh  duplicate.hxx  gate.hcc  gate.hh  gate.hxx  hna.hcc  hna.hh  hna.hxx  interfaces.hcc  interfaces.hh  interfaces.hxx  mid.hcc  mid.hh  mid.hxx  neighbors.hcc  neighbors.hh  neighbors.hxx  routes.hcc  routes.hh  routes.hxx  topology.hcc  topology.hh  topology.hxx
src/daemon/sys/: interfaceinfo.hh  realinterfaceinfo.hh  realinterfaceinfo.hxx  routing.hh  routing.hxx  socket.hh  socket.hxx  virtualinterfaceinfo.hh  virtualinterfaceinfo.hxx
src/daemon/sys/linux/: interfaceconfig.hh  interfaceconfig.hxx  interfacedesc.hh  interfacedesc.hxx  routingsocket.hh  routingsocket.hxx
src/daemon/sys/virtual/: interfacedesc.hh  interfacedesc.hxx  routingsocket.hh  routingsocket.hxx
src/daemon/utl/: args.hh  args.hxx
src/include/: config.hh.in  static_members_init.hcc
src/include/cst/: constants.hh
src/include/net/: ipaddress.hh  ipv4.hh  ipv6.hh
src/include/sch/: scheduler.hh  scheduler.hxx
src/include/sys/: unixsocket.hh  unixsocket.hxx
src/include/sys/linux/: netlink.hh  netlink.hxx
src/include/utl/: comparator.hh  data.hh  data.hxx  exception.hh  iterator.hh  log.hcc  log.hh  log.hxx  mark.hh  meta.hh  meta.hxx  seqnum.hh  set.hh  stampable.hh  stampable.hxx  syslog.cc  syslog.hh  timeval.hh  timeval.hxx  vtime.hh  vtime.hxx
src/switch/: main.cc
src/switch/alg/: forward_packet.hh  forward_packet.hxx
src/switch/cst/: params.hcc  params.hh
src/switch/gra/: graph.hcc  graph.hh  graph.hxx
src/switch/prs/: data.hh  data.hxx  location.hh  parse.hh  parse.hxx  parsedot.yy  scandot.ll  visitor.hh
src/switch/sch/: events.hh  events.hxx
src/switch/set/: client.hh  client.hxx  freeaddr.hh
src/switch/utl/: args.hh  args.hxx
src/tests/: Makefile.am  Makefile.in
src/tests/sanity/: Makefile.am  Makefile.in  generate.sh
